feat: demo sign-in flow, actionable recs, filter UX, sticky dock\n\n- Sign-in: reveal demo creds (from seed), auto-seed if missing, autofill + sign-in, fix setupCompleted check\n- API: GET /api/auth/test-user (seed account), POST /api/seed to run db:seed-comprehensive\n- Transactions: filters drive all sections (summary, recent); grid view; filter chips + active styles; no-scrollbar; hover overflow fixes\n- Budgets: gradient tiles replace icon text; truncate titles; SmartRecommendations actionable-only, dismiss (session/local), paginate (5/page)\n- Nav: left dock sticky-centered via portal\n- Layout: extra bottom padding on dashboard and transactions pages

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:push": "drizzle-kit push",
     "db:seed": "tsx src/lib/db/seed.ts",
     "db:seed-test": "tsx seed-test-data.ts",
+    "db:seed-comprehensive": "tsx scripts/seed-database.ts",
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
